force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Maintenance_Flag__c.field-meta.xml
<CustomField>
        <fullName>Account_Maintenance_Flag__c</fullName>
        <description>SFSL-1312 - Retrieve Maintenance Flag from Account</description>
        <formula>TEXT(SBQQ__Account__r.Maintenance_Flag__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Maintenance Flag</label>
        <type>Text</type>
    </CustomField>