force-app/main/default/objects/SBQQ__Quote__c/fields/Approved_Discount__c.field-meta.xml
<CustomField>
        <fullName>Approved_Discount__c</fullName>
        <label>Approved Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>