force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents that Account that will receive the Invoice and will be responsible for payment.</description>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Bill To Account)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </CustomField>