force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.SBQQ__Account__c</field>
                <operation>equals</operation>
                <valueField>Address__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Bill To Quotes</relationshipLabel>
        <relationshipName>BillToQuotes</relationshipName>
        <type>Lookup</type>
    </CustomField>