force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_City__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_City__c</fullName>
        <formula>Bill_To_Address__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To City</label>
        <type>Text</type>
    </CustomField>