force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Country__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Country__c</fullName>
        <formula>TEXT(Bill_To_Address__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Country</label>
        <type>Text</type>
    </CustomField>