force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Geo__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Geo__c</fullName>
        <description>Bill To Account Geography use in approval process for queue assignment</description>
        <formula>TEXT(Bill_To_Account__r.Geo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Geo</label>
        <type>Text</type>
    </CustomField>