force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Geo_New__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Geo_New__c</fullName>
        <description>Bill To Geography used in approval process</description>
        <label>Bill To Geo New</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>