force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Postal_Code__c</fullName>
        <formula>Bill_To_Address__r.Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Postal Code</label>
        <type>Text</type>
    </CustomField>