force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Region__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Region__c</fullName>
        <description>Bill To Region of the Bill To Account. Use in approval process.</description>
        <label>Bill To Region</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>