force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_State__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_State__c</fullName>
        <formula>TEXT(Bill_To_Address__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To State</label>
        <type>Text</type>
    </CustomField>