force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Street_2__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Street_2__c</fullName>
        <formula>Bill_To_Address__r.Street_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Street 2</label>
        <type>Text</type>
    </CustomField>