force-app/main/default/objects/SBQQ__Quote__c/fields/Business_Partner_Status__c.field-meta.xml
<CustomField>
        <fullName>Business_Partner_Status__c</fullName>
        <description>Business Partner Status coming from Sold To Partner of the opportunity. Only Partner in &#39;Good Standing&#39; get discount</description>
        <formula>SBQQ__Opportunity2__r.Sold_to_Partner_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Partner Status</label>
        <type>Text</type>
    </CustomField>