force-app/main/default/objects/SBQQ__Quote__c/fields/CAO_CFO_Rejected__c.field-meta.xml
<CustomField>
        <fullName>CAO_CFO_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify if the quote has been rejected by CAO or CFO</description>
        <label>CAO CFO Rejected</label>
        <type>Checkbox</type>
    </CustomField>