force-app/main/default/objects/SBQQ__Quote__c/fields/Committed_Term__c.field-meta.xml
<CustomField>
        <fullName>Committed_Term__c</fullName>
        <inlineHelpText>Duration in months after which the customer may choose to terminate the contract.</inlineHelpText>
        <label>Committed Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>