force-app/main/default/objects/SBQQ__Quote__c/fields/Conga_Email_Template_Id__c.field-meta.xml
<CustomField>
        <fullName>Conga_Email_Template_Id__c</fullName>
        <description>Store Conga Composer Email Template ID used in Generate Offer and Send Email action</description>
        <label>Conga Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>