force-app/main/default/objects/SBQQ__Quote__c/fields/Conga_Quote_Template_Id__c.field-meta.xml
<CustomField>
        <fullName>Conga_Quote_Template_Id__c</fullName>
        <description>Quote Template Id used for quote offer generation by Conga Composer</description>
        <label>Conga Quote Template Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>