force-app/main/default/objects/SBQQ__Quote__c/fields/ContractedAccountID__c.field-meta.xml
<CustomField>
        <fullName>ContractedAccountID__c</fullName>
        <formula>Bill_To_Account__c</formula>
        <label>Contracted Account</label>
        <type>Text</type>
    </CustomField>