force-app/main/default/objects/SBQQ__Quote__c/fields/CPQ_MYDQuote__c.field-meta.xml
<CustomField>
        <fullName>CPQ_MYDQuote__c</fullName>
        <formula>IF( AND( NOT(ISNULL(Quote_Duration__c)), NOT(ISBLANK(Quote_Duration__c)), Quote_Duration__c &gt; 0 ), Quote_Duration__c + 1 &gt; 731, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi Year Deal Quote</label>
        <type>Checkbox</type>
    </CustomField>