force-app/main/default/objects/SBQQ__Quote__c/fields/CPQ_QuoteARR_val__c.field-meta.xml
<CustomField>
        <fullName>CPQ_QuoteARR_val__c</fullName>
        <label>Quote ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>