force-app/main/default/objects/SBQQ__Quote__c/fields/Current_User_Profile__c.field-meta.xml
<CustomField>
        <fullName>Current_User_Profile__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Profile</label>
        <type>Text</type>
    </CustomField>