force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Reg_Status__c.field-meta.xml
<CustomField>
        <fullName>Deal_Reg_Status__c</fullName>
        <formula>TEXT(SBQQ__Opportunity2__r.Deal_Reg_Status__c)</formula>
        <label>Deal Reg Status</label>
        <type>Text</type>
    </CustomField>