force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
        <fullName>Deal_Type__c</fullName>
        <formula>TEXT(SBQQ__Opportunity2__r.Deal_Type__c)</formula>
        <label>Deal Type</label>
        <type>Text</type>
    </CustomField>