force-app/main/default/objects/SBQQ__Quote__c/fields/Default_Payment_Terms__c.field-meta.xml
<CustomField>
        <fullName>Default_Payment_Terms__c</fullName>
        <description>Defaulted with the default payment terms coming from the Bill To Account.</description>
        <formula>IF(ISBLANK(TEXT(Bill_To_Account__r.Default_Payment_Terms__c)),&quot;30 Days Net&quot;, TEXT(Bill_To_Account__r.Default_Payment_Terms__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Payment Terms</label>
        <type>Text</type>
    </CustomField>