force-app/main/default/objects/SBQQ__Quote__c/fields/Default_Payment_Terms_Days__c.field-meta.xml
<CustomField>
        <fullName>Default_Payment_Terms_Days__c</fullName>
        <description>Number of days corresponding to the default Payment Terms</description>
        <formula>VALUE(MID(Default_Payment_Terms__c,1,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Payment Terms Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>