force-app/main/default/objects/SBQQ__Quote__c/fields/Document_ID__c.field-meta.xml
<CustomField>
        <fullName>Document_ID__c</fullName>
        <label>Document ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>