force-app/main/default/objects/SBQQ__Quote__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </CustomField>