force-app/main/default/objects/SBQQ__Quote__c/fields/Edit_Access_on_Approved_Quote__c.field-meta.xml
<CustomField>
        <fullName>Edit_Access_on_Approved_Quote__c</fullName>
        <description>Use to identify user&#39;s profile having the ability to edit discount, start date, end date for approved quote. Field used in Quote Calculator Plugin.</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Access on Approved Quote</label>
        <type>Checkbox</type>
    </CustomField>