force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
        <fullName>EditLinesFieldSetName__c</fullName>
        <formula>CASE(TEXT(Line_Editor_View__c),&#39;Default&#39;,&#39;SBQQ__LineEditor&#39;,&#39;Price Waterfall&#39;,&#39;Price_Waterfall&#39;,&#39;Additional_Info&#39;)</formula>
        <label>EditLinesFieldSetName</label>
        <type>Text</type>
    </CustomField>