force-app/main/default/objects/SBQQ__Quote__c/fields/Eligible_for_Premium_Care__c.field-meta.xml
<CustomField>
        <fullName>Eligible_for_Premium_Care__c</fullName>
        <formula>OR(Account_ACV__c &gt;=75000 , $Profile.Name = &#39;Sales Operations Advanced&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for Premium Care</label>
        <type>Checkbox</type>
    </CustomField>