force-app/main/default/objects/SBQQ__Quote__c/fields/End_User_Contact__c.field-meta.xml
<CustomField>
        <fullName>End_User_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be used whenever the deal is made through a partner. This person&#39;s name will appear on generated quote document, in the end user section</description>
        <inlineHelpText>To be used whenever the deal is made through a partner, to reflect the end user contact. This person&#39;s name will appear on generated quote document, in the end user section. Primary Contact will be used for the distributor/partner contact.</inlineHelpText>
        <label>End User Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (End User Contact)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </CustomField>