force-app/main/default/objects/SBQQ__Quote__c/fields/Forced_Recalc_Date__c.field-meta.xml
<CustomField>
        <fullName>Forced_Recalc_Date__c</fullName>
        <description>Set this field to current timestamp to force a recalculation of the Quote.</description>
        <inlineHelpText>Set this field to current timestamp to force a recalculation of the Quote.</inlineHelpText>
        <label>Forced Recalc Date</label>
        <type>DateTime</type>
    </CustomField>