force-app/main/default/objects/SBQQ__Quote__c/fields/General_Comments__c.field-meta.xml
<CustomField>
        <fullName>General_Comments__c</fullName>
        <description>General comments printed on the generated PDF document.</description>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>