force-app/main/default/objects/SBQQ__Quote__c/fields/Geo_Ops__c.field-meta.xml
<CustomField>
        <fullName>Geo_Ops__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFSL-1003 - Relevant Geo Ops team member for my region - Use in approval process</description>
        <label>Geo Ops</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </CustomField>