force-app/main/default/objects/SBQQ__Quote__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
        <fullName>Legal_Entity__c</fullName>
        <description>UiPath Legal Entity</description>
        <inlineHelpText>UiPath Legal Entity</inlineHelpText>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UiPath INC</fullName>
                </value>
                <value>
                    <fullName>UiPath SRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>