force-app/main/default/objects/SBQQ__Quote__c/fields/Legal_Entity_New__c.field-meta.xml
<CustomField>
        <fullName>Legal_Entity_New__c</fullName>
        <formula>TEXT(SBQQ__Account__r.Primary_Subsidiary__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity</label>
        <type>Text</type>
    </CustomField>