force-app/main/default/objects/SBQQ__Quote__c/fields/License_Codes_Visible__c.field-meta.xml
<CustomField>
        <fullName>License_Codes_Visible__c</fullName>
        <description>Define if License Codes is visible in Quote Line Editor. Use in QCP.</description>
        <formula>IF(OR($Profile.Name = &quot;Sales Operations Admin&quot;, $Profile.Name = &quot;Sales Operations Advanced&quot;, $Profile.Name = &quot;Sales Operations Japan&quot;, $Profile.Name = &quot;Super Admin&quot;, $Profile.Name = &quot;System Administrator&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Codes Visible</label>
        <type>Checkbox</type>
    </CustomField>