force-app/main/default/objects/SBQQ__Quote__c/fields/Line_Editor_View__c.field-meta.xml
<CustomField>
        <fullName>Line_Editor_View__c</fullName>
        <defaultValue>&#39;Price Waterfall&#39;</defaultValue>
        <label>View</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price Waterfall</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Additional Info</fullName>
                    <isActive>false</isActive>
                    <label>Additional Info</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>