force-app/main/default/objects/SBQQ__Quote__c/fields/Managing_Director__c.field-meta.xml
<CustomField>
        <fullName>Managing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Managing Director from the Opportunity. Used in the approval process.</description>
        <label>Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </CustomField>