force-app/main/default/objects/SBQQ__Quote__c/fields/Number_Of_Products_Services__c.field-meta.xml
<CustomField>
        <fullName>Number_Of_Products_Services__c</fullName>
        <description>Roll-up summary to count the number of Products where Product Family &lt;&gt; Professional Service AND Product Family &lt;&gt; Training</description>
        <label>Number Of Products &amp; Services</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Line_Product_Family__c</field>
            <operation>notEqual</operation>
            <value>Professional Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Line_Product_Family__c</field>
            <operation>notEqual</operation>
            <value>Training</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>