force-app/main/default/objects/SBQQ__Quote__c/fields/Number_Of_PS_Products__c.field-meta.xml
<CustomField>
        <fullName>Number_Of_PS_Products__c</fullName>
        <description>Roll-up summary to count the number of Products where Product Family = Professional Service</description>
        <label>Number Of PS Products</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Line_Product_Family__c</field>
            <operation>equals</operation>
            <value>Professional Service</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>