force-app/main/default/objects/SBQQ__Quote__c/fields/Number_Of_PS_Training_Products__c.field-meta.xml
<CustomField>
        <fullName>Number_Of_PS_Training_Products__c</fullName>
        <description>Count the number of Products where Product Family = Professional Service OR Product Family = Training</description>
        <formula>Number_Of_PS_Products__c +  Number_Of_Training_Products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of PS &amp; Training Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>