force-app/main/default/objects/SBQQ__Quote__c/fields/Offer_Term__c.field-meta.xml
<CustomField>
        <fullName>Offer_Term__c</fullName>
        <description>Define which term is displayed on the Quote Offer document. Possible values are: Agreement, EULA or None</description>
        <formula>IF( SBQQ__Distributor__c &lt;&gt; &quot;&quot;, &quot;Distributor&quot;, 
     IF(AND(Sold_to_Partner_Type__c  = &quot;Software License Broker&quot;,Business_Partner_Status__c = &quot;Good Standing&quot;),&quot;SLB&quot;,
            IF(OR(Deal_Type__c = &quot;Resale&quot;, Deal_Type__c = &quot;Managed Service/BPO&quot;), &quot;Agreement&quot;,
            &quot;EULA&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Term</label>
        <type>Text</type>
    </CustomField>