force-app/main/default/objects/SBQQ__Quote__c/fields/Partner_Level__c.field-meta.xml
<CustomField>
        <fullName>Partner_Level__c</fullName>
        <formula>TEXT(SBQQ__Partner__r.Business_Partner_Level__c)</formula>
        <label>Partner Level</label>
        <type>Text</type>
    </CustomField>