force-app/main/default/objects/SBQQ__Quote__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
        <fullName>Partner_Type__c</fullName>
        <formula>TEXT(SBQQ__Distributor__r.Business_Partner_Type__c )</formula>
        <label>Distributor Partner Type</label>
        <type>Text</type>
    </CustomField>