force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Cycle__c.field-meta.xml
<CustomField>
        <fullName>Payment_Cycle__c</fullName>
        <inlineHelpText>Drives List Price discounting: if &quot;Upfront&quot; is selected, a x% discount may be applied on List Price.</inlineHelpText>
        <label>Payment Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                    <default>true</default>
                    <label>Annual</label>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>