force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
        <fullName>Payment_Terms__c</fullName>
        <description>Selected Payment Terms. Defaulted with the default payment terms coming from the Bill To Account.</description>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </CustomField>