force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms_Approval_Required__c.field-meta.xml
<CustomField>
        <fullName>Payment_Terms_Approval_Required__c</fullName>
        <formula>AND(TEXT(Payment_Terms__c) &lt;&gt;   Default_Payment_Terms__c,TEXT(Payment_Terms__c ) &lt;&gt; &#39;30 Days Net&#39;,TEXT(Payment_Terms__c ) &lt;&gt; &#39;45 Days Net&#39;,Payment_Terms_Days__c &gt; Default_Payment_Terms_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Approval Required</label>
        <type>Checkbox</type>
    </CustomField>