force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms_Days__c.field-meta.xml
<CustomField>
        <fullName>Payment_Terms_Days__c</fullName>
        <description>Number of days corresponding to the selected Payment Terms</description>
        <formula>CASE (TEXT( Payment_Terms__c ),
&#39;25 Days Net&#39;,25,
&#39;30 Days Net&#39;,30,
&#39;40 Days Net&#39;,40,
&#39;45 Days Net&#39;,45,
&#39;50 Days Net&#39;,50,
&#39;52 Days Net&#39;,52,
&#39;59 Days Net&#39;,59,
&#39;60 Days Net&#39;,60,
&#39;65 Days Net&#39;,65,
&#39;70 Days Net&#39;,70,
&#39;75 Days Net&#39;,75,
&#39;90 Days Net&#39;,90,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>