force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Duration__c.field-meta.xml
<CustomField>
        <fullName>Quote_Duration__c</fullName>
        <formula>IF(SBQQ__EndDate__c &gt;= SBQQ__StartDate__c, SBQQ__EndDate__c - SBQQ__StartDate__c + 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>