force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Link__c.field-meta.xml
<CustomField>
        <fullName>Quote_Link__c</fullName>
        <description>This field is created to use the CPQ Quote Link in Email template.</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260))+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Link</label>
        <type>Text</type>
    </CustomField>