force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
        <fullName>Quote_Name__c</fullName>
        <inlineHelpText>Enter a short description of the quote for quick reference</inlineHelpText>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>