force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Offer_Locale__c.field-meta.xml
<CustomField>
        <fullName>Quote_Offer_Locale__c</fullName>
        <description>Locale used in Quote Offer document to define format for date and currency</description>
        <formula>IF(TEXT(CurrencyIsoCode)=&quot;USD&quot;, &quot;en-US&quot;,
IF(TEXT(CurrencyIsoCode)=&quot;GBP&quot;, &quot;en-GB&quot;,
IF(TEXT(CurrencyIsoCode)=&quot;JPY&quot;, &quot;ja-JP&quot;,
IF(TEXT(CurrencyIsoCode)=&quot;EUR&quot;, &quot;fr-FR&quot;,&quot;en-US&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Offer Locale</label>
        <type>Text</type>
    </CustomField>