force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Total_Discount__c.field-meta.xml
<CustomField>
        <fullName>Quote_Total_Discount__c</fullName>
        <description>Used in Discount Approval Process</description>
        <formula>IF(SBQQ__ListAmount__c = 0,0,(SBQQ__ListAmount__c - SBQQ__NetAmount__c) /  SBQQ__ListAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>