force-app/main/default/objects/SBQQ__Quote__c/fields/Regional_Commercial_Finance_Leader__c.field-meta.xml
<CustomField>
        <fullName>Regional_Commercial_Finance_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFSL-1260 - Relevant Regional Commercial Finance Leader for quote geography - Use in approval process</description>
        <label>Regional Commercial Finance Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </CustomField>