force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__ConsumptionRateOverride__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConsumptionRateOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Read-only indicator to show whether a quote contains overriding consumption rates.</description>
        <inlineHelpText>Read-only indicator to show whether a quote contains overriding consumption rates.</inlineHelpText>
        <label>Consumption Rate Override</label>
        <type>Checkbox</type>
    </CustomField>