force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__EndDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>End date for subscriptions in this group.</description>
        <inlineHelpText>End date for subscriptions in this group.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>