force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__OrderBy__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OrderBy__c</fullName>
        <description>The Quote Line field used to determine order grouping.</description>
        <inlineHelpText>The Quote Line field used to determine order grouping.</inlineHelpText>
        <label>Order By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ProductFamily__c</fullName>
                </value>
                <value>
                    <fullName>QuantityBasedFormulaField__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>