force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__OrderGroupID__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend: Re-Quote transaction, which is the original primary quote&#39;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend: Re-Quote transaction, which is the original primary quote&#39;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>